Fix legend svg overflow issue with IE

--- a/scss/components/_stats-legend-container.scss
+++ b/scss/components/_stats-legend-container.scss
@@ -58,6 +58,11 @@
     }
   }
 
+  svg,
+  svg:not(:root) {
+    overflow: auto;
+  }
+
   circle {
     fill: rgba(0,0,0,0);
     stroke: $off-white;
